# dagger-python-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dagger.cue  pyproject.toml
.github/workflows/: test.yaml
dagger_python_example/: main.py
tests/: test_dagger_python_example.py
