[tool.poetry]
name = "dagger-python-example"
version = "0.1.0"
description = ""
authors = ["ohke <kenta1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
